Tumbler car shadow offset y added.

--- a/src/cars/_car-config.scss
+++ b/src/cars/_car-config.scss
@@ -188,6 +188,7 @@ $car-configs-exclusive: (
       shadow-width: 95%,
       shadow-height: 30%,
       shadow-space: null,
+      shadow-offset-y: 1.5px,
     )
 );
 
