--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 // -----------------------------------------------------------------------------
 // 1. CONFIGURATION & HELPERS
 // -----------------------------------------------------------------------------
-@import "variables";
+@import "./data/variables";
 
 // -----------------------------------------------------------------------------
 // 2. EXTERNAL DEPENDENCIES
