--- a/src/nameRankColor.scss
+++ b/src/nameRankColor.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "./data/variables";
 
 // Rank styles using variables with #content parent selector
 #content, #popup {
