--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -1,45 +1,7 @@
+@import "colors";
+
 // container width
 $container: 1300px;
-
-// global colors
-$black: #101010;
-$deepgray: #1A1A1A;
-$darkgray: #282828;
-$white: #B2B2B2;
-$blue: hsl(200, 20%, 50%);
-$lightblue: hsl(200, 40%, 60%);
-$red: #AA7788;
-$middlegray: #676c71;
-$orange: hsl(30, 65%, 40%);
-
-// Rank Color Variables
-$rang1: #cccccc;
-$rang2: #76e4e0;
-$rang3: #2cd42c;
-$rang4: #ccbc00;
-$rang5: #ff8b22;
-$rang6: #ff1b6b;
-$rang7: #ba81e7;
-$rang8: #9ea0ff;
-$rang9: #73c8ef;
-$rang10: #c441c4;
-$rang11: #ffd700;
-
-// Game type colors for background #282B2F (original colors adjusted for contrast)
-$gametype-normal: #b8b8b8;
-$gametype-quote: #B688D4;
-$gametype-sprint: #D4746E;
-$gametype-marathon: #F564A0;
-$gametype-noerror: #70A3CC;
-$gametype-noerrorcnt: #70A3CC;
-$gametype-abra: #8A9AB8;
-$gametype-abra-premium: #E6C033;
-$gametype-digits: #AAAAAA;
-$gametype-referats: #90B857;
-$gametype-voc: $blue;
-$gametype-chars: #E6912B;
-$gametype-qual: #FF5555;
-$premium-yellow: #E6C033;
 
 // top main page icons
 $topRating: url('https://i.imgur.com/coRjBrH.gif') no-repeat 0 0;
@@ -156,74 +118,6 @@ $showHistory: transparent url('https://i.imgur.com/GzXGiKX.png') no-repeat 0% 0%
 
 // btn fuel
 $btnFuel: url('https://i.imgur.com/DRxzmSe.png') no-repeat;
-
-// // cars
-// $car1: transparent url('https://i.imgur.com/uwSNGKd.png') no-repeat !important;
-// $car2: transparent url('https://i.imgur.com/7Bbb8ET.png') no-repeat !important;
-// $car3: transparent url('https://i.imgur.com/SXnTafn.png') no-repeat !important;
-// $car4: transparent url('https://i.imgur.com/uZ3rMfO.png') no-repeat !important;
-// $car5: transparent url('https://i.imgur.com/bIDJiCM.png') no-repeat !important;
-// $car6: transparent url('https://i.imgur.com/H81bdnR.png') no-repeat !important;
-// $car7: transparent url('https://i.imgur.com/tChyLsQ.png') no-repeat !important;
-// $car8: transparent url('https://i.ibb.co/PxLCw7j/8.png') no-repeat !important;
-// $car9: transparent url('https://i.imgur.com/jzhpPYu.png') no-repeat !important;
-// $car10: transparent url('https://i.imgur.com/izRB1FS.png') no-repeat !important;
-// $car11: transparent url('https://i.imgur.com/d7Ev18i.png') no-repeat !important;
-// $car12: transparent url('https://i.imgur.com/ne8Z9ik.png') no-repeat !important;
-// $car13: transparent url('https://i.imgur.com/tO7DgE6.png') no-repeat !important;
-// $car14: transparent url('https://i.imgur.com/nsOmDce.png') no-repeat !important;
-// $car15: transparent url('https://i.imgur.com/Mj57DXC.png') no-repeat !important;
-// $car16: transparent url('https://i.imgur.com/uiYztrv.png') no-repeat !important;
-// $car17: transparent url('https://i.imgur.com/vBeeRS7.png') no-repeat !important;
-// $car18: transparent url('https://i.imgur.com/awvJgeH.png') no-repeat !important;
-// $car19: transparent url('https://i.imgur.com/Dh3ioZS.png') no-repeat !important;
-// $car20: transparent url('https://i.imgur.com/qu1EHaB.png') no-repeat !important;
-// $car22: transparent url('https://i.imgur.com/XjAdCEu.png') no-repeat !important;
-// $car23: transparent url('https://i.imgur.com/ivw7DJ6.png') no-repeat !important;
-// $car24: transparent url('https://i.ibb.co/w6nKw0L/24.png') no-repeat !important;
-// $car25: transparent url('https://i.imgur.com/iheYOvs.png') no-repeat !important;
-// $car26: transparent url('https://i.imgur.com/HVdv2ZL.png') no-repeat !important;
-// $car27: transparent url('https://i.imgur.com/RLn2dy9.png') no-repeat !important;
-// $car28: transparent url('https://i.imgur.com/tQSm6kB.png') no-repeat !important;
-// $car29: transparent url('https://i.imgur.com/8wS5O6W.png') no-repeat !important;
-// $car30: transparent url('https://i.imgur.com/KHiwTpI.png') no-repeat !important;
-// $car31: transparent url('https://i.imgur.com/9jEat54.png') no-repeat !important;
-// $car32: transparent url('https://i.imgur.com/W2E7EvL.png') no-repeat !important;
-// $car33: transparent url('https://i.imgur.com/Qwucafx.png') no-repeat !important;
-// $car34: transparent url('https://i.imgur.com/6DBBR8Y.png') no-repeat !important;
-// $car35: transparent url('https://i.imgur.com/iaeOOWq.png') no-repeat !important;
-// $car36: transparent url('https://i.imgur.com/iMe92ys.png') no-repeat !important;
-// $car37: transparent url('https://i.imgur.com/LXzxKGK.png') no-repeat !important;
-// $car38: transparent url('https://i.imgur.com/xNJbSQF.png') no-repeat !important;
-// $car39: transparent url('https://i.imgur.com/0hs1xKA.png') no-repeat !important;
-// $car40: transparent url('https://i.imgur.com/9hBedtu.png') no-repeat !important;
-// $car41: transparent url('https://i.imgur.com/DD8a1m8.png') no-repeat !important;
-// $car42: transparent url('https://i.imgur.com/hjtensL.png') no-repeat !important;
-// $car43: transparent url('https://i.imgur.com/v8Mdsse.png') no-repeat !important;
-// $car44: transparent url('https://i.imgur.com/o45oF5p.png') no-repeat !important;
-
-// // exclusive cars
-// $batman: transparent url('https://i.imgur.com/xodN8FZ.png') no-repeat !important;
-// $car1000-1: transparent url('https://i.imgur.com/JHQidUp.png') no-repeat !important;
-// $car1001-1: transparent url('https://i.imgur.com/w1IKisn.png') no-repeat !important;
-// $car1002-1: transparent url('https://i.imgur.com/nx2wjJN.png') no-repeat !important;
-// $car1003-1: transparent url('https://i.imgur.com/fyHwPsb.png') no-repeat !important;
-// $car1006-1: transparent url('https://i.imgur.com/ioGn0t2.png') no-repeat !important;
-// $car1008-1: transparent url('https://i.imgur.com/ywycywz.png') no-repeat !important;
-// $car1009-1: transparent url('https://i.imgur.com/tfM0o3z.png') no-repeat !important;
-// $car1010-1: transparent url('https://i.imgur.com/lneE69t.png') no-repeat !important;
-// $car1012-3: transparent url('https://i.imgur.com/WD7jFw4.png') no-repeat !important;
-// $car1013-3: transparent url('https://i.imgur.com/Oz22rno.png') no-repeat !important;
-// $car1015-1: transparent url('https://i.imgur.com/e5Hmfk9.png') no-repeat !important;
-// $car1016-1: transparent url('https://i.imgur.com/sWHgUmT.png') no-repeat !important;
-// $car1017: transparent url('https://i.imgur.com/uigPeya.png') no-repeat !important;
-// $car1018: transparent url('https://i.imgur.com/dAG2QAF.png') no-repeat !important;
-// $car1019: transparent url('https://i.imgur.com/BiFcab1.png') no-repeat !important;
-// $car1020: transparent url('https://i.imgur.com/BnU9NGH.png') no-repeat !important;
-// $car1021-1: transparent url('https://i.imgur.com/mzXJiCW.png') no-repeat !important;
-// $car1022: transparent url('https://i.imgur.com/BkFXr6O.png') no-repeat !important;
-// $car1023-1: transparent url('https://i.imgur.com/Dk9aRDa.png') no-repeat !important;
-// $car1024: transparent url('https://i.imgur.com/rMPLyU8.png') no-repeat !important;
 
 // create btn race normal state
 $createNormal: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="235" height="50" viewBox="0 0 55.23 11.75"><defs><style> .str0 {stroke:%23373435;stroke-width:0.49;stroke-miterlimit:2.61313} .fil0 {fill:%238EC5FF} .fil1 {fill:%23373435} .fil2 {fill:%23373435} </style></defs><rect class="fil0" width="55.23" height="11.75"/><path class="fil1" d="M19.09 3.81l0.59 0 0 4.17 -0.59 0 0 -4.17zm-2.37 0l0.59 0 0 4.17 -0.59 0 0 -4.17zm0.37 0l2.31 0 0 0.55 -2.31 0 0 -0.55z"/><path class="fil1" d="M22.09 8.02c-0.29,0 -0.55,-0.06 -0.77,-0.19 -0.22,-0.13 -0.39,-0.31 -0.51,-0.54 -0.12,-0.23 -0.18,-0.5 -0.18,-0.81l0 -1.18c0,-0.3 0.06,-0.57 0.18,-0.81 0.12,-0.23 0.29,-0.41 0.51,-0.53 0.22,-0.13 0.48,-0.2 0.77,-0.2 0.29,0 0.55,0.07 0.77,0.2 0.22,0.12 0.39,0.3 0.51,0.53 0.13,0.24 0.19,0.51 0.19,0.81l0 1.18c0,0.31 -0.06,0.58 -0.19,0.81 -0.12,0.23 -0.29,0.41 -0.51,0.54 -0.22,0.13 -0.48,0.19 -0.77,0.19zm0 -0.57c0.17,0 0.32,-0.04 0.46,-0.12 0.13,-0.08 0.23,-0.19 0.3,-0.33 0.07,-0.14 0.11,-0.31 0.11,-0.5l0 -1.22c0,-0.18 -0.04,-0.35 -0.11,-0.49 -0.07,-0.15 -0.17,-0.25 -0.3,-0.33 -0.14,-0.08 -0.29,-0.12 -0.46,-0.12 -0.17,0 -0.32,0.04 -0.45,0.12 -0.14,0.08 -0.24,0.18 -0.31,0.33 -0.07,0.14 -0.11,0.31 -0.11,0.49l0 1.22c0,0.19 0.04,0.36 0.11,0.5 0.07,0.14 0.17,0.25 0.31,0.33 0.13,0.08 0.28,0.12 0.45,0.12z"/><path class="fil1" d="M24.25 7.42l0 0c0.16,0 0.3,-0.04 0.4,-0.11 0.11,-0.08 0.19,-0.2 0.24,-0.36 0.05,-0.17 0.07,-0.38 0.07,-0.64l0 -2.5 0.59 0 0 2.46c0,0.4 -0.05,0.73 -0.13,0.98 -0.09,0.25 -0.22,0.43 -0.41,0.55 -0.18,0.12 -0.41,0.18 -0.71,0.18l-0.05 0 0 -0.56zm2.76 -3.61l0.59 0 0 4.17 -0.59 0 0 -4.17zm-1.69 0l2 0 0 0.55 -2 0 0 -0.55z"/><path class="fil1" d="M28.63 3.81l0.59 0 0 4.17 -0.59 0 0 -4.17zm0.29 3.61l2.39 0 0 0.56 -2.39 0 0 -0.56zm0 -1.79l2.08 0 0 0.56 -2.08 0 0 -0.56zm0 -1.82l2.39 0 0 0.55 -2.39 0 0 -0.55z"/><path class="fil1" d="M32.75 4.15l0.58 0 0 3.83 -0.58 0 0 -3.83zm-1.18 -0.34l2.94 0 0 0.55 -2.94 0 0 -0.55z"/><path class="fil1" d="M34.97 3.81l0.59 0 0 4.17 -0.59 0 0 -4.17zm0.29 3.61l2.39 0 0 0.56 -2.39 0 0 -0.56zm0 -1.79l2.08 0 0 0.56 -2.08 0 0 -0.56zm0 -1.82l2.39 0 0 0.55 -2.39 0 0 -0.55z"/><path class="fil1" d="M38.31 7.42l0 0c0.17,0 0.31,-0.04 0.41,-0.11 0.11,-0.08 0.18,-0.2 0.23,-0.36 0.05,-0.17 0.08,-0.38 0.08,-0.64l0 -2.5 0.58 0 0 2.46c0,0.4 -0.04,0.73 -0.13,0.98 -0.08,0.25 -0.22,0.43 -0.4,0.55 -0.18,0.12 -0.42,0.18 -0.71,0.18l-0.06 0 0 -0.56zm2.77 -3.61l0.59 0 0 4.17 -0.59 0 0 -4.17zm-1.69 0l2 0 0 0.55 -2 0 0 -0.55z"/><polygon class="fil1" points="45.2,7.98 45.2,4.7 45.27,4.77 43.18,7.98 42.7,7.98 42.7,3.81 43.28,3.81 43.28,7.14 43.21,7.06 45.31,3.81 45.78,3.81 45.78,7.98"/><polygon class="fil2 str0" points="10.69,5.88 8.39,7.2 6.1,8.53 6.57,5.88 6.1,3.23 8.39,4.55"/></svg>') no-repeat;
